// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--andromeda"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--andromeda"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular k-Form-TextInputWithUnit__unit--disabled"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--andromeda"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular k-Form-TextInputWithUnit__unit--error"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with size prop matches with snapshot 1`] = `
<div
  className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--andromeda"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--big"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--big"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit matches with snapshot 1`] = `
<div
  className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--andromeda"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--andromeda"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular k-Form-TextInputWithUnit__unit--valid"
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with variant prop matches with snapshot 1`] = `
<div
  className="sc-htpNat lblaZj k-Form-TextInputWithUnit k-Form-TextInputWithUnit--orion"
>
  <input
    className="sc-bdVaJa VHhzP k-Form-TextInput k-Form-TextInputWithUnit__input k-Form-TextInput--andromeda k-Form-TextInput--regular"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="k-Form-TextInputWithUnit__unit k-Form-TextInputWithUnit__unit--regular"
  >
    λ
  </span>
</div>
`;
